apps/home/budge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: budge
spec: {}
status: {}
