apps/home/budge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budge
  namespace: budge
  labels:
    app: budge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budge
  template:
    metadata:
      labels:
        app: budge
    spec:
      containers:
        - name: budge
          image: lscr.io/linuxserver/budge:latest
          volumeMounts:
            - mountPath: /config
              name: config-volume
          ports:
            - containerPort: 80
            - containerPort: 443
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: budge-pvc
