apps/home/budge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budge
  namespace: budge
spec:
  type: ClusterIP
  selector:
    app: budge
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
