apps/home/budge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budge-traefik
  namespace: budge
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - http:
        paths:
          - path: /budge
            pathType: Prefix
            backend:
              service:
                name: budge
                port:
                  name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: budge-tailscale
#   namespace: budge
# spec:
#   ingressClassName: tailscale
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: budge
#                 port:
#                   number: 80
#   tls:
#     - hosts:
#         - budge.deer-truck.ts.net
